# CA2_BugsLife_Michal_Becmer_D00256088

./: BattleAnt.cpp  BattleAnt.h  Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Direction.h  Hopper.cpp  Hopper.h  main.cpp
src/: main.cpp
